# conway

./: CMakeLists.txt  README.md  imgui.ini
lib/imgui/: imconfig.h  imgui-SFML.cpp
patterns/rle_all/: 106p135.cells  110p62.cells  112p15.cells  113p18.cells  114p6h1v0pushalong2.cells  119p4h1v0tagalong.cells  126p3h1v0.cells  128p10.2.rle  135degreemwsstog.cells  13loop.cells  13loop2.cells  14p2.1.cells  14p2.3.cells  14p2.4.cells  151p3h1v0.cells  15bentpaperclip.cells  15gsynthp46.rle  16cell47487m.cells  180degreekickback.cells  209p8.cells  20enginecordership.rle  20p3.rle  230p8.cells  235c79climber.cells  244p3.cells  246p3.cells  24827m.cells  25p3h1v0.2.cells  27p4h1v1.cells  27p4h1v1.rle  27p4h1v1tagalongs.rle  27p4h1v1tagalongs2.rle  28p7.3.cells  28p7.3_synth.rle  28p7.3eatingss.cells  29bitstilllifeno1.cells  2enginecordership.cells  2enginecordershipseed.cells  30p4h2v0.4.cells  30p5h2v0eater2.cells  (+785 more)
src/: engine.cpp  engine.hpp  game_of_life.cpp  pattern_explorer.cpp  pattern_explorer.hpp  render.cpp  render.hpp
